Get lecture and change hw01

--- a/1sem/introToIntellectDataAnalisys/homework/01/vorobyov_hw1.ipynb
+++ b/1sem/introToIntellectDataAnalisys/homework/01/vorobyov_hw1.ipynb
@@ -82,20 +82,15 @@
     "\n",
     "class MyKNeighborsClassifier(NeighborsBase, KNeighborsMixin,\n",
     "                             SupervisedIntegerMixin, ClassifierMixin):\n",
-    "    # base initialisation\n",
-    "    neighbors_amount = None\n",
-    "    algorithm = None\n",
-    "\n",
-    "    # after using fit\n",
-    "    x_data = None\n",
-    "    x_tree = None\n",
-    "    y_data = None\n",
-    "    y_classes = None\n",
-    "    classes_amount = None\n",
     "\n",
     "    def __init__(self, n_neighbors, algorithm='brute'):\n",
     "        self.neighbors_amount = n_neighbors\n",
     "        self.algorithm = algorithm\n",
+    "        self.x_data = None\n",
+    "        self.x_tree = None\n",
+    "        self.y_data = None\n",
+    "        self.y_classes = None\n",
+    "        self.classes_amount = None\n",
     "\n",
     "    def fit(self, X, y):\n",
     "        self.y_data = np.array(y).astype(int)\n",
@@ -111,7 +106,6 @@
     "            _find_mode,\n",
     "            1,\n",
     "            self._nearest_classes(X))\n",
-    "        # return stats.mode(self._prediction_classes(X).T)[0].reshape(-1)\n",
     "\n",
     "    def predict_proba(self, X):\n",
     "        return np.apply_along_axis(\n",
