--- a/1sem/introToIntellectDataAnalisys/lecture03/lecture_03.ipynb
+++ b/1sem/introToIntellectDataAnalisys/lecture03/lecture_03.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -184,8 +184,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\папик\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+      "[nltk_data]     C:\\Users\\dev\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -194,19 +194,19 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import nltk\n",
-    "# nltk.download('stopwords')"
+    "import nltk\n",
+    "nltk.download('stopwords')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -472,13 +472,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "думать\n"
+     ]
+    }
+   ],
    "source": [
     "import pymorphy2\n",
     "\n",
