Add new lecture

--- a/1sem/introToIntellectDataAnalisys/lecture03/lecture_03.ipynb
+++ b/1sem/introToIntellectDataAnalisys/lecture03/lecture_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -483,7 +483,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "думать\n"
+      "авиация\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
     "\n",
     "import pymorphy2\n",
     "morph = pymorphy2.MorphAnalyzer()\n",
-    "print(morph.parse(u'думающему')[0].normal_form)"
+    "print(morph.parse(u'Авиации')[0].normal_form)"
    ]
   },
   {
