Add new lectures, cpp homework

--- a/1sem/introToIntellectDataAnalisys/lecture03/lecture_03.ipynb
+++ b/1sem/introToIntellectDataAnalisys/lecture03/lecture_03.ipynb
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -483,7 +483,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "авиация\n"
+      "собака\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
     "\n",
     "import pymorphy2\n",
     "morph = pymorphy2.MorphAnalyzer()\n",
-    "print(morph.parse(u'Авиации')[0].normal_form)"
+    "print(morph.parse(u'собак')[0].normal_form)"
    ]
   },
   {
