--- a/1sem/introToIntellectDataAnalisys/practice/2048/2048.ipynb
+++ b/1sem/introToIntellectDataAnalisys/practice/2048/2048.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +87,18 @@
     "                yield last\n",
     "                last = value\n",
     "        yield last\n",
+    "                \n",
+    "    def streaming_sum_z(self, sequence):\n",
+    "        pos = 0\n",
+    "        last = sequence[0]\n",
+    "        result = [0] * len(sequence)\n",
+    "        for i in range(1, len(sequence)):\n",
+    "            if \n",
     "\n",
     "    def shift(self, sequence):\n",
     "        length = len(sequence)\n",
     "        reduced = list(reversed(list(filter(None, self.streaming_sum(sequence)))))\n",
-    "        return [0] * (length - len(reduced)) + reduced\n"
+    "        return [0] * (length - len(reduced)) + reduced"
    ]
   },
   {
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0 0]\n",
-      " [0 0 2 0]\n",
+      "[[2 0 0 2]\n",
+      " [0 2 0 0]\n",
       " [0 0 0 0]\n",
-      " [2 0 2 0]]\n"
+      " [0 0 2 2]]\n"
      ]
     }
    ],
@@ -132,17 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[2 0 0 0]\n",
+      "[0 2 0 0]\n",
+      "[0 0 0 2]\n",
+      "[2 0 0 2]\n",
       "[[0 0 0 0]\n",
       " [0 0 0 0]\n",
-      " [0 0 2 0]\n",
-      " [2 0 2 0]]\n"
+      " [0 0 0 2]\n",
+      " [2 2 2 2]]\n"
      ]
     }
    ],
